# pydevsetup

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
devsetup/: __init__.py  __main__.py  common.py  config.py  config_sample.toml  globals.py  logger.py  utils.py
devsetup/cli/: editor.py  git.py  ssh.py
devsetup/cli/editors/: base_editor.py  editor_manager.py  intellij.py  registry_editor.py  rider.py  vs.py  vscode.py
devsetup/cli/git_repositories/: base_git_repository.py  git_repository_manager.py  github.py  gitlab.py  registry_git_repository.py
devsetup/scripts/: setup_editor.sh  setup_git.sh  setup_git.ssh  setup_ssh.sh  setup_ssh.ssh
devsetup/scripts/editors/: intellij.sh  rider.sh  vs.sh  vscode.sh
devsetup/scripts/git_repositories/: github.sh  gitlab.sh
devtool/: editor_setup.ssh  ssh_setup.ssh
