[project]
name = "devsetup-project"
version = "0.1.0"
description = "A CLI tool to setup development environments."
authors = [{name = "Felipe Seiji Inoue", email="felipeinoue@yahoo.com.br"}]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE"}
dependencies = [
]

[tool.setuptools]
packages = ["devsetup"]

[project.scripts]
devsetup = "devsetup.__main__:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"