[project]
name = "devsetup"
version = "0.1.0"
description = "A CLI tool to setup development environments."
authors = [{name = "Felipe Seiji Inoue", email="felipeinoue@yahoo.com.br"}]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE"}
dependencies = [
]

[tool.hatch.build.targets.wheel]
packages = ["devsetup"]

[project.scripts]
devsetup = "devsetup.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"